--- a/packages/scheduling/package.json
+++ b/packages/scheduling/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.5",
+    "@supabase/ssr": "^0.5.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.468.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.5",
+    "zod": "^3.24.1"
   }
 }
